Fix for overflow issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -100,7 +100,7 @@ body {
  width: 79%;
     padding-bottom: 0px;
     padding-top: 0.8rem;
-    border: 1px solid gray;
+    border: 1px solid rgb(3, 169, 244);;
 }
 i.fa.fa-2x:hover, i.fa.fa-2x:active{
   color:black;
@@ -109,10 +109,35 @@ i.fa.fa-2x:hover, i.fa.fa-2x:active{
       overflow: auto;
 }
 .conversation{
-      overflow: auto;
-          max-height: 600px;
-    overflow-y: scroll;
+      /*overflow: auto;*/
+          /*max-height: 600px;*/
+    /*overflow-y: scroll;*/
 }
 .sort{
   margin:0px 10px;
+}/*
+.conversation{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}*/
+
+.wrapper{
+      position: absolute;
+    width: 100%;
+    height: 68%;
+    top: 40px;
+    bottom: 70px;
+    overflow-y: auto;
 }
+.conversation .heading{
+  margin: 5px;
+    height: 27px;
+    position: absolute;
+}
+
+/*.form-horizontal{
+      position: absolute;
+    width: 100%;
+    bottom: 3px;
+}*/
